Got the API working

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="assets/reset.css" />
-    <link rel="stylesheet" href="assets/style.css" />
-    <link rel="icon" type="image/x-icon" href="..." />
+    <link rel="stylesheet" href="./assets/reset.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Menu Planner & Carbon Foot Print Calculator</title>
   </head>
 
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-    <script src="assets/script.js/"></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
+
