--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="./assets/script.js"></script>
+
+    <div class="card">
+      <h5 class="card-header">Recipes</h5>
+      <div class="card-body" id="mainCard">
+        <h5 class="card-title">Title</h5>
+        <p class="card-text">Text</p>
+        <a href="#" class="btn btn-primary">Go to recipe</a>
+      </div>
+    </div>
   </body>
 </html>
 
