Changes to chart

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <!--Div that will hold the chart-->
   <button class="btn btn-primary" id="chartButton" onclick="createChart()">Make CO2 Chart</button>
-  <div>
+  <div class="w-50">
     <canvas id="myChart"></canvas>
   </div>
   
