logic for preferences, saved in an object

--- a/userPreference.html
+++ b/userPreference.html
@@ -8,7 +8,8 @@
     <title>User Preferences</title>
 </head>
 <body>
-    <div id="container" class="container"> <div class="row">
+    <div id="container" class="container"> 
+        <div class="row">
         <!-- ABOUT YOU PREFERENCES-->
         <div class="col align-items-center flex-col sign-up">
             <div class="form-wrapper align-items-center">
@@ -19,39 +20,35 @@
                             Female
                         </p>
                         <label class="switch">
-                            <input type="checkbox">
+                            <input type="checkbox" id="female">
                             <span class="slider round"></span>
                         </label>
                         <p>
                             Male
                         </p>
                         <label class="switch">
-                            <input type="checkbox">
+                            <input type="checkbox"  id="male">
                             <span class="slider round"></span>
                         </label>
                         <p>
                             Other
                         </p>
                         <label class="switch">
-                            <input type="checkbox">
+                            <input type="checkbox"  id="other">
                             <span class="slider round"></span>
                         </label>
                         <p>
                             My current weight
                         </p>
                         <div class="input-group">
-                            <input type="weight"id="wheight">
+                            <input type="text"id="wheight">
                           </div>
                         <p>
                            My current height
                         </p>
                         <div class="input-group">
-                            <input type="heigh" id="height">
+                            <input type="text" id="height">
                     </div>
-                    <br>
-                    <button id="save-button">
-                        Save Preferences
-                    </button>
                     <!-- END ABOUT YOU -->
                 </div>
                 </div>
@@ -71,105 +68,101 @@
                                 Celery-free
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="celery-free">
                                 <span class="slider round"></span>
                               </label>
                             <p>
                                 Crustacean-free
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="crustacean-free">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 Dairy-free
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="dairy-free">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 Egg-free
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="egg-free">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 Fish-free
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="fish-free">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 Gluten-free
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="gluten-free">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 Lupin-free
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox" id="lupin-free">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 Mustard-free
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="mustard-free">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 Peanut-free
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="peanut-free">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 Sesame-free
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="sesame-free">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 Shellfish-free
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="shellfish-free">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 Soy-free
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="soy-free">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 Tree-Nut-free
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="tree-nut-free">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 Wheat-free
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="wheat-free">
                                 <span class="slider round"></span>
                             </label>
                         </div>
-                        <br>
-                        <button id="save-button">
-                            Save Preferences
-                        </button>
                     </div>
                 </div>
             <!-- END ALLERGENS -->
@@ -189,98 +182,102 @@
                                 Vegan
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="vegan">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 Vegetarian
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="vegetarian">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 Pescatarian
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox" id="pescatarian">
                                 <span class="slider round"></span>
                             </label>
                             <p>
                                 American
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="american">
                                 <span class="slider round"></span>
                             </label>
                             <p>
-                                Indian
+                                Asian
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox" id="asian">
                                 <span class="slider round"></span>
                             </label>
                             <p>
-                                Mediterranean
+                                Chinese
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox" id="chinese">
                                 <span class="slider round"></span>
                             </label>
                             <p>
-
+                               Eastern Europe
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox" id="easter-europe">
                                 <span class="slider round"></span>
                             </label>
                             <p>
-
+                               French
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="french">
                                 <span class="slider round"></span>
                             </label>
                             <p>
-
+                              Indian
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="indian">
                                 <span class="slider round"></span>
                             </label>
                             <p>
-
+                            Italian 
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="italian">
                                 <span class="slider round"></span>
                             </label>
                             <p>
-
+                            Mediterranean 
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="mediterranean">
                                 <span class="slider round"></span>
                             </label>
                             <p>
-
+                             Mexican
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="mexican">
                                 <span class="slider round"></span>
                             </label>
                             <p>
-
+                            Middle Eastern
                             </p>
                             <label class="switch">
-                                <input type="checkbox">
+                                <input type="checkbox"  id="middle-eastern">
                                 <span class="slider round"></span>
                             </label>
+                            <p>
+                              South American
+                                </p>
+                                <label class="switch">
+                                    <input type="checkbox" id="south-american">
+                                    <span class="slider round"></span>
+                                </label>
                         </div>
-                        <br>
-                        <button id="save-button">
-                            Save Preferences
-                        </button>
+                
                         <!-- END DIETS -->
                     </div>
                     </div>
@@ -300,21 +297,21 @@
                                             Breakfast
                                         </p>
                                         <label class="switch">
-                                            <input type="checkbox">
+                                            <input type="checkbox"  id="breackfast">
                                             <span class="slider round"></span>
                                         </label>
                                         <p>
                                             Lunch
                                         </p>
                                         <label class="switch">
-                                            <input type="checkbox">
+                                            <input type="checkbox"  id="lunch">
                                             <span class="slider round"></span>
                                         </label>
                                         <p>
                                             Dinner
                                         </p>
                                         <label class="switch">
-                                            <input type="checkbox">
+                                            <input type="checkbox"  id="dinner">
                                             <span class="slider round"></span>
                                         </label>
                                         <br>
@@ -324,49 +321,49 @@
                                             Monday
                                         </p>
                                         <label class="switch">
-                                            <input type="checkbox">
+                                            <input type="checkbox"  id="monday">
                                             <span class="slider round"></span>
                                         </label>
                                         <p>
                                             Tuesday
                                         </p>
                                         <label class="switch">
-                                            <input type="checkbox">
+                                            <input type="checkbox" id="tuesday">
                                             <span class="slider round"></span>
                                         </label>
                                         <p>
                                             Wednesday
                                         </p>
                                         <label class="switch">
-                                            <input type="checkbox">
+                                            <input type="checkbox"  id="wednesday">
                                             <span class="slider round"></span>
                                         </label>
                                         <p>
                                             Thursday
                                         </p>
                                         <label class="switch">
-                                            <input type="checkbox">
+                                            <input type="checkbox"  id="thursday">
                                             <span class="slider round"></span>
                                         </label>
                                         <p>
                                             Friday
                                         </p>
                                         <label class="switch">
-                                            <input type="checkbox">
+                                            <input type="checkbox"  id="friday">
                                             <span class="slider round"></span>
                                         </label>
                                         <p>
                                             Saturday
                                         </p>
                                         <label class="switch">
-                                            <input type="checkbox">
+                                            <input type="checkbox"  id="saturday">
                                             <span class="slider round"></span>
                                         </label>
                                         <p>
                                             Sunday
                                         </p>
                                         <label class="switch">
-                                            <input type="checkbox">
+                                            <input type="checkbox" id="sunday">
                                             <span class="slider round"></span>
                                         </label>
                                     </div>
@@ -381,6 +378,6 @@
                         </div>
                     </div>
                     <!-- SCRIPT -->
-                     <script src=""></script>
+                    <script src="userPreference.js" async defer></script>
 </body>
 </html>
