--- a/userRegistration.html
+++ b/userRegistration.html
@@ -98,6 +98,6 @@
       </div>
       <!-- END CONTENT SECTION -->
     </div>
-    <script src="assets/userRegistration.js"></script>
+    <script src="assets/userRegistration.js" async defer></script>
   </body>
 </html> 
