--- a/index.html
+++ b/index.html
@@ -7,45 +7,140 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link rel="stylesheet" href="./assets/reset.css" />
   <link rel="stylesheet" href="./assets/style.css" />
-  <title>Menu Planner & Carbon Foot Print Calculator</title>
+  <title>Dishcovery Dashboard</title>
 
 </head>
 
-<body>
+<body height="100vh">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <script src="./assets/script.js"></script>
   <script src="./assets/recipes.js"></script>
-  
-  <!-- Search -->
-  <form class="d-flex" role="search" onsubmit="return false;">
-    <input class="form-control me-2" id="userInput" type="text" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success" id="searchButton" type="submit" onclick="search()">Search</button>
-  </form>
 
-  <!-- Recipes -->
-  <div class="card">
-    <h5 class="card-header">Recipes</h5>
-    <div class="card-body p-5 container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-2 g-lg-3" id="mainCard">
-        <!-- Information gets put in here -->
+  <!-- Navigation -->
+  <nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">Dishcovery</span>
+    </div>
+  </nav>
+
+  <!-- Page Grid -->
+  <div class="container w-50 text-center" id="leftContent">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-2">
+
+      <div class="col p-3">
+        <!-- Meal Planner -->
+        <div class="card" id="mealPlanner">
+          <a class="card-body" href="#">
+            <h5 class="card-title">Meal Planner</h5>
+            <img src="./assets/imgs/mealPlanner.png"/>
+          </a>
+        </div>
+      </div>
+
+      <div class="col p-3">
+        <!-- Recipe Search -->
+        <div class="card w-100 h-100" id="recipeSearch">
+          <a class="card-body" href="recipeSearch.html">
+            <h5 class="card-title">Recipe Search</h5>
+            <img src="./assets/imgs/recipeSearch.png"/>
+          </a>
+        </div>
+      </div>
+
+
+      <div class="row w-100 p-3"> 
+        <!-- News -->
+        <div class="card">
+          <div class="card-body p-3 container">
+            <h5 class="card-title">News</h5>
+            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3" id="news">
+              <!--News cards go here-->
+            </div>
+            <!-- News API -->
+            <script>
+              headlines = [];
+              var newsURL = "https://api.worldnewsapi.com/search-news?source-countries=uk&text=diet-pills-book&min-sentiment=0.5&api-key=eb806899ad0a46e88d4dd451e6fd9c8c";
+              fetch(newsURL)
+                .then(function (response) {
+                  return response.json();
+                })
+                .then(function (data) {
+                  console.log(data)
+
+                  for (var i = 0; i < 3; i++) {
+
+                    // creates a new card element
+                    var newCard = $("<div>").addClass("card col");
+
+                    // create a card body to attach to
+                    var newsContainer = $("<div>").addClass("card-body");
+
+                    // creates a new image element
+                    var newsImg = $("<img>").addClass("card-img-top p-2");
+
+                    // applies the url to the src
+                    newsImg.attr("src", data.news[i].image);
+
+                    // appends the image to the card div
+                    newsContainer.append(newsImg);
+
+                    // creates new title element
+                    var headline = $("<a>").addClass("card-title");
+
+                    // assign link to headline
+                    headline.attr("href", data.news[i].url)
+
+                    // applying the headline to the title element
+                    headline.text(data.news[i].title);
+
+                    // append the title to the card div
+                    newsContainer.append(headline);
+
+                    //appends new card and then recipe container
+                    newCard.append(newsContainer);
+                    $("#news").append(newCard);
+                  }
+                })
+            </script>
+          </div>
+        </div>
+      </div>
+      <div class="row p-3 w-100"> 
+        <!-- Shopping List -->
+        <div class="card">
+          <div class="card-body" href="index.html">
+            <h5 class="card-title">Shopping List</h5>
+            <p class="text-center">Coming soon...</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 
-  <!--Div that will hold the chart-->
-  <button class="btn btn-primary" id="chartButton" onclick="createChart()">Make CO2 Chart</button>
-  <div class="w-50">
-    <canvas id="myChart"></canvas>
+
+  <!-- Grid pt2 -->
+  <div class="container w-50 text-center" id="rightContent">
+    <div class="row g-2 g-lg-3 p-3">
+
+      <div class="row">
+      </div>
+      <!-- CO2 Emissions Chart -->
+      <div class="card w-100 h-100">
+        <div class="card-body">
+          <h5 class="card-title">CO2</h5>
+
+          <body onload="fetchData()">
+            <div>
+              <canvas id="myChart"></canvas>
+            </div>
+        </div>
+      </div>
+    </div>
+
   </div>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-
-</html>
-
-
+</body>
