--- a/userRegistration.html
+++ b/userRegistration.html
@@ -24,11 +24,8 @@
               <div class="input-group">
                 <input type="password" placeholder="Password" id="signup-password">
               </div>
-              <div class="input-group">
-                <input type="password" placeholder="Confirm password" id="signup-confirm-password">
-              </div>
               <button id="signup-button">
-                Sign up
+                Continue with your registration 
               </button>
               <p>
                 <span>
@@ -45,7 +42,7 @@
         <!-- SIGN IN -->
         <div class="col align-items-center flex-col sign-in">
           <div class="form-wrapper align-items-center">
-            <div class="form sign-in">
+            <div class="form sign-in" id="form-sign-in">
               <div class="input-group">
                 <input type="text" placeholder="Username" id="signin-username">
               </div>
@@ -98,6 +95,8 @@
       </div>
       <!-- END CONTENT SECTION -->
     </div>
+    <script type="module"></script>
     <script src="assets/userRegistration.js" async defer></script>
+   
   </body>
 </html> 
