--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+    <link rel="stylesheet" href="dashboard.css" />
   <link rel="stylesheet" href="./assets/reset.css" />
   <link rel="stylesheet" href="./assets/style.css" />
   <title>Recipe Display</title>
@@ -18,7 +19,18 @@
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <script src="./assets/script.js"></script>
   <script src="./assets/recipes.js"></script>
+  <script src="dashboard.js"></script>
 
-  <div class="card">
-  </div>
+
+<body>
+  <div class="card" id="calendar-container">
+    <div class="card-header month-year" id="monthYear"></div>
+    <table class="card-table" id="calendar"></table>
+    <div class="card-buttons">
+        <button class="btn" onclick="prevMonth()"><</button>
+        <button class="btn" onclick="nextMonth()">></button>
+    </div>
+</div>
+<div class="card">
+</div>
 </body>
