--- a/index.html
+++ b/index.html
@@ -13,48 +13,62 @@
 
 </head>
 
-<body height="100vh">
+<body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <script src="./assets/script.js"></script>
   <script src="./assets/recipes.js"></script>
 
   <!-- Navigation -->
-  <nav class="navbar bg-body-tertiary">
+  <nav class="navbar">
     <div class="container-fluid">
       <span class="navbar-brand mb-0 h1">Dishcovery</span>
     </div>
   </nav>
 
+<section class="container" id="Main Page">
+  <div class="p-3 text-center" id="title">
+    <h2>Dashboard</h2>
+  </div>
   <!-- Page Grid -->
-  <div class="container w-50 text-center" id="leftContent">
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-2">
+  <div class="container text-center" id="leftContent">
+    <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 g-2">
 
       <div class="col p-3">
         <!-- Meal Planner -->
         <div class="card" id="mealPlanner">
           <a class="card-body" href="#">
             <h5 class="card-title">Meal Planner</h5>
-            <img src="./assets/imgs/mealPlanner.png"/>
+            <img src="./assets/imgs/mealPlanner.png" />
           </a>
         </div>
       </div>
 
       <div class="col p-3">
         <!-- Recipe Search -->
-        <div class="card w-100 h-100" id="recipeSearch">
+        <div class="card w-100" id="recipeSearch">
           <a class="card-body" href="recipeSearch.html">
             <h5 class="card-title">Recipe Search</h5>
-            <img src="./assets/imgs/recipeSearch.png"/>
+            <img src="./assets/imgs/recipeSearch.png" />
           </a>
         </div>
       </div>
 
+      <div class="col p-3">
+        <!-- Shopping List -->
+        <div class="card w-100">
+          <div class="card-body">
+            <h5 class="card-title">Shopping List</h5>
+            <img src="./assets/imgs/shoppingList.png" />
+          </div>
+        </div>
+      </div>
 
-      <div class="row w-100 p-3"> 
+
+      <div class="row row-cols-1 w-100 p-3">
         <!-- News -->
         <div class="card">
-          <div class="card-body p-3 container">
+          <div class="card-body container">
             <h5 class="card-title">News</h5>
             <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3" id="news">
               <!--News cards go here-->
@@ -62,7 +76,7 @@
             <!-- News API -->
             <script>
               headlines = [];
-              var newsURL = "https://api.worldnewsapi.com/search-news?source-countries=uk&text=diet-pills-book&min-sentiment=0.5&api-key=eb806899ad0a46e88d4dd451e6fd9c8c";
+              var newsURL = "https://api.worldnewsapi.com/search-news?source-countries=uk&text=diet-pills-book&min-sentiment=0.5&api-key=c465a704f4064500ab8e8f153e6c18ff";
               fetch(newsURL)
                 .then(function (response) {
                   return response.json();
@@ -108,27 +122,21 @@
           </div>
         </div>
       </div>
-      <div class="row p-3 w-100"> 
-        <!-- Shopping List -->
-        <div class="card">
-          <div class="card-body" href="index.html">
-            <h5 class="card-title">Shopping List</h5>
-            <p class="text-center">Coming soon...</p>
-          </div>
-        </div>
+      <div class="row row-cols-1 w-100 p-3" id="chartArea">
+
       </div>
     </div>
   </div>
 
 
   <!-- Grid pt2 -->
-  <div class="container w-50 text-center" id="rightContent">
-    <div class="row g-2 g-lg-3 p-3">
+  <div class="container text-center" id="rightContent">
+    <div class="row g-2 g-lg-3 p-3" id="co2Chart">
 
-      <div class="row">
+      <div class="row" >
       </div>
       <!-- CO2 Emissions Chart -->
-      <div class="card w-100 h-100">
+      <div class="card w-100">
         <div class="card-body">
           <h5 class="card-title">CO2</h5>
 
@@ -139,8 +147,14 @@
         </div>
       </div>
     </div>
-
   </div>
-
+</section>
+  <!-- Chart.js JS -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  </section>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+    crossorigin="anonymous"></script>
 </body>
