--- a/recipeSearch.html
+++ b/recipeSearch.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -18,30 +19,38 @@
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-  <script src="./assets/script.js"></script>
   <script src="./assets/recipes.js"></script>
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <span class="navbar-brand mb-0 h1">Dishcovery</span>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" aria-current="page" href="index.html">Dashboard</a>
-          <a class="nav-link" href="#">Meal Planner</a>
-          <a class="nav-link active" href="recipeSearch.html">Recipe Search</a>
-          <a class="nav-link disabled" aria-disabled="true">Shopping List</a>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li>
+            <a class="nav-link" aria-current="page" href="index.html">Dashboard</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#">Meal Planner</a>
+          </li>
+          <li>
+            <a class="nav-link active" href="recipeSearch.html">Recipe Search</a>
+          </li>
+          <li>
+            <a class="nav-link disabled" aria-disabled="true">Shopping List</a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
 
   <!-- Search -->
   <form class="d-flex p-5 align-content-center justify-content-center w-100" role="search" onsubmit="return false;">
-    <input class="form-control me-2 align-content-center justify-content-center w-50" id="userInput" type="text" placeholder="Search" aria-label="Search">
+    <input class="form-control me-2 align-content-center justify-content-center w-50" id="userInput" type="text"
+      placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-success" id="searchButton" type="submit" onclick="search()">Search</button>
   </form>
 
@@ -55,6 +64,10 @@
     </div>
   </div>
 
-
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+crossorigin="anonymous"></script>
+<script src="assets/js/script.js"></script>
 
 </html>
