Changes to user flow, fixed links and renamed files for better clarity

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="col p-3">
         <!-- Meal Planner -->
         <div class="card" id="mealPlanner">
-          <a class="card-body" href="#">
+          <a class="card-body" href="mealPlanner.html">
             <h5 class="card-title">Meal Planner</h5>
             <img src="./assets/imgs/mealPlanner.png" />
           </a>
