--- a/mealPlanner.html
+++ b/mealPlanner.html
@@ -5,22 +5,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link rel="stylesheet" href="mealPlanner.css" />
   <link rel="stylesheet" href="./assets/reset.css" />
-  <link rel="stylesheet" href="./assets/style.css" />
-  <title>Menu Planner & Carbon Foot Print Calculator</title>
+  <title>Recipe Display</title>
 
 </head>
 
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+  <script src="./assets/script.js"></script>
   <script src="./assets/recipes.js"></script>
+  <script src="mealPlanner.js"></script>
 
+
+<body>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
@@ -34,10 +35,10 @@
             <a class="nav-link" aria-current="page" href="index.html">Dashboard</a>
           </li>
           <li>
-            <a class="nav-link" href="mealPlanner.html">Meal Planner</a>
+            <a class="nav-link active" href="mealPlanner.html">Meal Planner</a>
           </li>
           <li>
-            <a class="nav-link active" href="recipeSearch.html">Recipe Search</a>
+            <a class="nav-link" href="recipeSearch.html">Recipe Search</a>
           </li>
           <li>
             <a class="nav-link disabled" aria-disabled="true">Shopping List</a>
@@ -47,27 +48,17 @@
     </div>
   </nav>
 
-  <!-- Search -->
-  <form class="d-flex p-5 align-content-center justify-content-center w-100" role="search" onsubmit="return false;">
-    <input class="form-control me-2 align-content-center justify-content-center w-50" id="userInput" type="text"
-      placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success" id="searchButton" type="submit" onclick="search()">Search</button>
-  </form>
-
-  <!-- Recipes -->
-  <div class="card">
-    <h5 class="card-header">Recipes</h5>
-    <div class="card-body p-5 container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-2 g-lg-3" id="mainCard">
-        <!-- Information gets put in here -->
-      </div>
+  <div class="card" id="calendar-container">
+    <div class="card-header month-year" id="monthYear"></div>
+    <table class="card-table" id="calendar"></table>
+    <div class="card-buttons">
+        <button class="btn" onclick="prevMonth()"></button>
+        <button class="btn" onclick="nextMonth()">></button>
     </div>
-  </div>
+</div>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
 integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
 crossorigin="anonymous"></script>
-<script src="assets/js/script.js"></script>
-
-</html>
+</body>
