--- a/index.html
+++ b/index.html
@@ -1,160 +1,102 @@
 <!DOCTYPE html>
-<html lang="en-gb">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./assets/reset.css" />
-  <link rel="stylesheet" href="./assets/style.css" />
-  <title>Dishcovery Dashboard</title>
-
-</head>
-
-<body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-  <script src="./assets/script.js"></script>
-  <script src="./assets/recipes.js"></script>
-
-  <!-- Navigation -->
-  <nav class="navbar">
-    <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">Dishcovery</span>
-    </div>
-  </nav>
-
-<section class="container" id="Main Page">
-  <div class="p-3 text-center" id="title">
-    <h2>Dashboard</h2>
-  </div>
-  <!-- Page Grid -->
-  <div class="container text-center" id="leftContent">
-    <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 g-2">
-
-      <div class="col p-3">
-        <!-- Meal Planner -->
-        <div class="card" id="mealPlanner">
-          <a class="card-body" href="mealPlanner.html">
-            <h5 class="card-title">Meal Planner</h5>
-            <img src="./assets/imgs/mealPlanner.png" />
-          </a>
-        </div>
-      </div>
-
-      <div class="col p-3">
-        <!-- Recipe Search -->
-        <div class="card w-100" id="recipeSearch">
-          <a class="card-body" href="recipeSearch.html">
-            <h5 class="card-title">Recipe Search</h5>
-            <img src="./assets/imgs/recipeSearch.png" />
-          </a>
-        </div>
-      </div>
-
-      <div class="col p-3">
-        <!-- Shopping List -->
-        <div class="card w-100">
-          <div class="card-body">
-            <h5 class="card-title">Shopping List</h5>
-            <img src="./assets/imgs/shoppingListGrey.png" />
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/index.css" />
+    <title>Register form</title> 
+  </head>
+  <body>
+    <div id="container" class="container">
+    <!--FORM SECTION -->
+      <div class="row">
+        <!-- SIGN UP -->
+        <div class="col align-items-center flex-col sign-up">
+          <div class="form-wrapper align-items-center">
+            <div class="form sign-up">
+              <div class="input-group"> 
+                <input type="text" placeholder="Username" id="signup-username">
+              </div>
+              <div class="input-group">
+                <input type="email" placeholder="Email" id="signup-email">
+              </div>
+              <div class="input-group">
+                <input type="password" placeholder="Password" id="signup-password">
+              </div>
+              <button id="signup-button">
+                Continue with your registration 
+              </button>
+              <p>
+                <span>
+                  Already have an account?
+                </span>
+                <b onclick="toggle()" class="pointer">
+                  Sign in here
+                </b>
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-
-
-      <div class="row row-cols-1 w-100 p-3">
-        <!-- News -->
-        <div class="card">
-          <div class="card-body container">
-            <h5 class="card-title">News</h5>
-            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-2 g-lg-3" id="news">
-              <!--News cards go here-->
+        <!-- END SIGN UP -->
+        <!-- SIGN IN -->
+        <div class="col align-items-center flex-col sign-in">
+          <div class="form-wrapper align-items-center">
+            <div class="form sign-in" id="form-sign-in">
+              <div class="input-group">
+                <input type="text" placeholder="Username" id="signin-username">
+              </div>
+              <div class="input-group">
+                <input type="password" placeholder="Password" id="signin-password">
+              </div>
+              <button id="signin-button">
+                Sign in
+              </button>
+              <p>
+                <span>
+                  Don't have an account?
+                </span>
+                <b onclick="toggle()" class="pointer">
+                  Sign up here
+                </b>
+              </p>
             </div>
-            <!-- News API -->
-            <script>
-              headlines = [];
-              var newsURL = "https://api.worldnewsapi.com/search-news?source-countries=uk&text=diet-pills-book&min-sentiment=0.5&api-key=82b4b78d72014e3cad8da18eb8ac3046";
-              fetch(newsURL)
-                .then(function (response) {
-                  return response.json();
-                })
-                .then(function (data) {
-                  console.log(data)
-
-                  for (var i = 0; i < 3; i++) {
-
-                    // creates a new card element
-                    var newCard = $("<div>").addClass("card col");
-
-                    // create a card body to attach to
-                    var newsContainer = $("<div>").addClass("card-body");
-
-                    // creates a new image element
-                    var newsImg = $("<img>").addClass("card-img-top p-2");
-
-                    // applies the url to the src
-                    newsImg.attr("src", data.news[i].image);
-
-                    // appends the image to the card div
-                    newsContainer.append(newsImg);
-
-                    // creates new title element
-                    var headline = $("<a>").addClass("card-title");
-
-                    // assign link to headline
-                    headline.attr("href", data.news[i].url)
-
-                    // applying the headline to the title element
-                    headline.text(data.news[i].title);
-
-                    // append the title to the card div
-                    newsContainer.append(headline);
-
-                    //appends new card and then recipe container
-                    newCard.append(newsContainer);
-                    $("#news").append(newCard);
-                  }
-                })
-            </script>
+          </div>
+          <div class="form-wrapper">
           </div>
         </div>
+        <!-- END SIGN IN -->
       </div>
-      <div class="row row-cols-1 w-100 p-3" id="chartArea">
-
-      </div>
-    </div>
-  </div>
-
-
-  <!-- Grid pt2 -->
-  <div class="container text-center" id="rightContent">
-    <div class="row g-2 g-lg-3 p-3" id="co2Chart">
-
-      <div class="row" >
-      </div>
-      <!-- CO2 Emissions Chart -->
-      <div class="card w-100">
-        <div class="card-body">
-          <h5 class="card-title">CO2</h5>
-
-          <body onload="fetchData()">
-            <div>
-              <canvas id="myChart"></canvas>
-            </div>
+      <!-- END FORM SECTION -->
+      <!-- CONTENT SECTION -->
+      <div class="row content-row">
+        <!-- SIGN IN CONTENT -->
+        <div class="col align-items-center flex-col">
+          <div class="text sign-in">
+            <h2>
+              Welcome 
+            </h2>
+          </div>
+          <div class="img sign-in">
+          </div>
         </div>
+        <!-- END SIGN IN CONTENT -->
+        <!-- SIGN UP CONTENT -->
+        <div class="col align-items-center flex-col">
+          <div class="img sign-up">
+          </div>
+          <div class="text sign-up">
+            <h2>
+              Join with us
+            </h2>
+          </div>
+        </div>
+        <!-- END SIGN UP CONTENT -->
       </div>
+      <!-- END CONTENT SECTION -->
     </div>
-  </div>
-</section>
-  <!-- Chart.js JS -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  </section>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-    crossorigin="anonymous"></script>
-</body>
+    <script type="module"></script>
+    <script src="assets/index.js" async defer></script>
+   
+  </body>
+</html> 
