--- a/mealPlanner.html
+++ b/mealPlanner.html
@@ -16,8 +16,6 @@
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-  <script src="./assets/script.js"></script>
-  <script src="./assets/recipes.js"></script>
   <script src="mealPlanner.js"></script>
 
 
@@ -32,7 +30,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li>
-            <a class="nav-link" aria-current="page" href="index.html">Dashboard</a>
+            <a class="nav-link" aria-current="page" href="dashboard.html">Dashboard</a>
           </li>
           <li>
             <a class="nav-link active" href="mealPlanner.html">Meal Planner</a>
@@ -47,7 +45,7 @@
       </div>
     </div>
   </nav>
-
+  
   <div class="card" id="calendar-container">
     <div class="card-header month-year" id="monthYear"></div>
     <table class="card-table" id="calendar"></table>
