--- a/mealPlanner.html
+++ b/mealPlanner.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
-    <link rel="stylesheet" href="mealPlanner.css" />
+    <link rel="stylesheet" href="./assets/mealPlanner.css" />
   <link rel="stylesheet" href="./assets/reset.css" />
   <title>Recipe Display</title>
 
@@ -51,7 +51,7 @@
     <table class="card-table" id="calendar"></table>
     <div class="card-buttons">
         <button class="btn" onclick="prevMonth()"></button>
-        <button class="btn" onclick="nextMonth()">></button>
+        <button class="btn" onclick="nextMonth()"></button>
     </div>
 </div>
 
