--- a/mealPlanner.html
+++ b/mealPlanner.html
@@ -16,7 +16,7 @@
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-  <script src="mealPlanner.js"></script>
+  <script src="assets/mealPlanner.js"></script>
 
 
 <body>
