--- a/mealPlanner.html
+++ b/mealPlanner.html
@@ -9,10 +9,8 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
     <link rel="stylesheet" href="mealPlanner.css" />
   <link rel="stylesheet" href="./assets/reset.css" />
-  <title>Recipe Display</title>
-
+  <title>Meal Planner</title>
 </head>
-
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
@@ -20,8 +18,6 @@
   <script src="./assets/recipes.js"></script>
   <script src="mealPlanner.js"></script>
 
-
-<body>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
@@ -32,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li>
-            <a class="nav-link" aria-current="page" href="index.html">Dashboard</a>
+            <a class="nav-link" aria-current="page" href="dashboard.html">Dashboard</a>
           </li>
           <li>
             <a class="nav-link active" href="mealPlanner.html">Meal Planner</a>
@@ -47,18 +43,24 @@
       </div>
     </div>
   </nav>
-
+  <!-- Calendar -->
   <div class="card" id="calendar-container">
     <div class="card-header month-year" id="monthYear"></div>
     <table class="card-table" id="calendar"></table>
     <div class="card-buttons">
-        <button class="btn" onclick="prevMonth()"></button>
+        <button class="btn" onclick="prevMonth()"><</button>
         <button class="btn" onclick="nextMonth()">></button>
     </div>
 </div>
+<!-- Meal planner-->
+<div class="container" id="meal-planner-container"></div>
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-crossorigin="anonymous"></script>
+  
+</div>
+<!-- Include your other scripts below -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+<script src="./assets/recipes.js"></script>
+<script src=".mealPlanner.js"></script>
 </body>
+</html>
