--- a/userPreference.html
+++ b/userPreference.html
@@ -378,6 +378,6 @@
                         </div>
                     </div>
                     <!-- SCRIPT -->
-                    <script type= module src="userPreference.js" async defer></script>
+                    <script src="userPreference.js" async defer></script>
 </body>
 </html>
