debugging and adding toggle in planner Navbar

--- a/mealPlanner.html
+++ b/mealPlanner.html
@@ -46,8 +46,8 @@
     <div class="card-header month-year" id="monthYear"></div>
     <table class="card-table" id="calendar"></table>
     <div class="card-buttons">
-        <button class="btn" onclick="prevMonth()"></button>
-        <button class="btn" onclick="nextMonth()">></button>
+        <button class="btn" onclick="prevMonth()">Prev</button>
+        <button class="btn" onclick="nextMonth()">Next</button>
     </div>
 </div>
 <!-- Meal planner-->
