--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/index.css" />
+    <link rel="stylesheet" href="assets/styleUserReg.css" />
     <title>Register form</title> 
   </head>
   
@@ -75,7 +75,7 @@
         <div class="col align-items-center flex-col">
           <div class="text sign-in">
             <h2>
-              Welcome 
+              Welcome to Dishcovery
             </h2>
           </div>
           <div class="img sign-in">
