--- a/recipeSearch.html
+++ b/recipeSearch.html
@@ -10,8 +10,8 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./assets/reset.css" />
-  <link rel="stylesheet" href="./assets/dashboard.css" />
+  <link rel="stylesheet" href="assets/reset.css" />
+  <link rel="stylesheet" href="assets/style.css" />
   <title>Menu Planner & Carbon Foot Print Calculator</title>
 
 </head>
@@ -19,7 +19,7 @@
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-  <script src="./assets/recipes.js"></script>
+  <script src="assets/recipes.js"></script>
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg">
