--- a/userPreference.html
+++ b/userPreference.html
@@ -14,13 +14,32 @@
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-    <script src="./assets/dashboard.js"></script>
-    <script src="./assets/recipes.js"></script>
 
     <!-- Navigation -->
-    <nav class="navbar">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <span class="navbar-brand mb-0 h1">Dishcovery</span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li>
+                        <a class="nav-link" aria-current="page" href="dashboard.html">Dashboard</a>
+                    </li>
+                    <li>
+                        <a class="nav-link active" href="mealPlanner.html">Meal Planner</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="recipeSearch.html">Recipe Search</a>
+                    </li>
+                    <li>
+                        <a class="nav-link disabled" aria-disabled="true">Shopping List</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -389,15 +408,15 @@
                             </button>
                             <!-- END Diets -->
                         </div>
-                   <!-- END FORM SECTION 4-->        
+                        <!-- END FORM SECTION 4-->
+                    </div>
                 </div>
-            </div>
-            <!-- SCRIPT -->
-            <script src="assets/userPreference.js"></script>
-            <!-- Bootstrap JS -->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-                integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-                crossorigin="anonymous"></script>
+                <!-- SCRIPT -->
+                <script src="assets/userPreference.js"></script>
+                <!-- Bootstrap JS -->
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+                    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+                    crossorigin="anonymous"></script>
 </body>
 
 </html>
